# rust-gpu-wgpu-template

./: Cargo.toml  README.md
builder/src/: main.rs
main/: Cargo.toml
main/src/: lib.rs
shaders/compute-shader/: Cargo.toml
shaders/mouse-shader/: Cargo.toml
shaders/reduce/: Cargo.toml
shaders/shared/: Cargo.toml
shaders/simplest-shader/: Cargo.toml
shaders/sky-shader/: Cargo.toml
