[package]
name = "sky-shader"
version = "0.4.0-alpha.12"
authors = ["Embark <opensource@embark-studios.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
publish = false

[lib]
crate-type = ["lib", "dylib"]

[dependencies]
shared = { path = "../shared" }
spirv-std = { git = "https://github.com/EmbarkStudios/rust-gpu", features = ["glam"] }
